demo/kind/manifests/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf-exporter-operator
  labels:
    app.kubernetes.io/name: iperf-exporter-operator
    app.kubernetes.io/component: operator
spec:
  selector:
    app.kubernetes.io/name: iperf-exporter-operator
  ports:
    - name: metrics
      port: 9869
      targetPort: metrics
      protocol: TCP
